fixed overflow x axis scroll and added hire me button and download cv

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 :root {
     --background-color: rgb(36, 36, 36);
     --button-color: #1e90ff;
+    --button-color-hover:rgb(4, 104, 203);
     --web-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
@@ -88,7 +89,7 @@ button:hover {
 }
 .mobile-nav {
     position: absolute;
-    padding: 20px 50px;
+    padding:  20px 50px;
     right: 0;
     top: 0;
     bottom: 0;
@@ -99,7 +100,7 @@ button:hover {
     display: none;
 }
 .mobile-nav ul li {
-    padding: 15px 0;
+    padding-top: 50px ;
 }
 .mobile-nav ul li a {
     text-decoration: none;
@@ -113,7 +114,6 @@ button:hover {
     max-width: 1200px;
     width: 100%;
     margin: auto;
-    height: 600px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -121,14 +121,11 @@ button:hover {
 }
 .hero-left {
     flex-basis: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
 }
 .hero-right {
     flex-basis: 50%;
     height: 100%;
-    /* background-color: greenyellow; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -137,20 +134,26 @@ button:hover {
     color: white;
     width: 100%;
     text-align: left;
+    padding-bottom: 5rem;
 }
 .hero-textbox p {
     font-size: 3rem;
     padding-bottom: 15px;
+    font-style: italic;
 }
 .hero-textbox h2 {
     font-size: 3.5rem;
     font-weight: 600;
     padding-bottom: 15px;
 }
-.hero-textbox h2 .bcolor::first-letter {
-    color: red;
-    font-size: 3.5rem;
+.bcolor{
     display: inline-block;
+}
+.hero-textbox h2 .bcolor::first-letter {
+    color: orangered;
+    font-size: 4rem;
+    display: inline-block;
+    font-weight: 700;
 }
 .hero-textbox span {
     font-size: 28px;
@@ -168,14 +171,34 @@ button:hover {
     max-width: 100%;
 }
 
+span i{
+    color: var(--button-color);
+}
+.hero-btn{
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 5%;
+    margin-bottom: 20px;
+    
+   
+}
+.hero-btn button{
+    width:45%;
+    padding: 20px 0;
+    
+}
+
 /* ----------------------Portfolio Show case-------------------- */
 #portfolio{
     width: 100%;
 }
 .showcase{
     max-width: 1200px;
-    ma
+    
 }
+
 
 
 /* ----------------------------------About Me------------------ */
@@ -322,16 +345,10 @@ button:hover {
     width: 100%;
 }
 
-.form-milako {
+.form-container {
     max-width: 1200px;
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     margin: auto;
-}
-
-.form-container {
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     padding: 60px 20px;
     background-color: #f8ffff;
@@ -485,6 +502,52 @@ textarea {
     background-color: #5029bc;
     transition: ease-in 0.5s;
 }
+
+
+/* ------------------Responsive Hero Text at 1000px----------------- */
+@media screen and (max-width:1000px) {
+    .hero-container {
+        width: 100%;
+        margin: auto;
+        
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+  
+    .hero-textbox {
+        color: white;
+        width: 90%;
+        text-align: left;
+       padding: 10px 0 20px 20px;
+       
+    }
+    .hero-textbox p {
+        font-size: 3rem;
+        padding-bottom: 15px;
+        font-style: italic;
+    }
+    .hero-textbox h2 {
+        font-size: 3.5rem;
+        font-weight: 600;
+        padding-bottom: 15px;
+    }
+    .bcolor{
+        display: inline-block;
+    }
+    .hero-textbox h2 .bcolor::first-letter {
+        color: orangered;
+        font-size: 4rem;
+        display: inline-block;
+        font-weight: 700;
+    }
+    .hero-textbox span {
+        font-size: 28px;
+    }
+  
+}
+
+
 /* -----------------------------Responsive Form---------------------- */
 @media screen and (max-width:900px) {
     .content-box {
@@ -513,8 +576,10 @@ textarea {
     .rightside {
         width: 100%;
         padding: 10px 30px 10px 50px;
-    }
+    } 
 }
+
+
 
 @media screen and (max-width:620px) {
     .content-box {
@@ -580,14 +645,9 @@ textarea {
 @media screen and (max-width: 500px) {
     .timeline {
         width: 100%;
-        margin: auto;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
     }
     .timeline::after {
-        left: 20px;
+        left: 31px;
     }
     .checkpoint {
         width: 100%;
@@ -608,6 +668,18 @@ textarea {
     .checkpoint:nth-child(even) .arrow,
     .checkpoint:nth-child(odd) .arrow {
         display: none;
+    }
+    .hero-img-box {
+        width: 300px;
+        height: 300px;
+        background-color: blue;
+        border-radius: 0 50%;
+        overflow: hidden;
+        border: 1px solid rgb(0, 94, 255);
+    }
+    .hero-img-box img {
+        object-fit: cover;
+        max-width: 100%;
     }
 }
 
@@ -653,16 +725,16 @@ textarea {
         text-align: left;
     }
     .hero-textbox p {
-        font-size: 1.5rem;
+        font-size: 3rem;
         padding-bottom: 15px;
     }
     .hero-textbox h2 {
-        font-size: 2rem;
+        font-size: 4rem;
         font-weight: 600;
         padding-bottom: 15px;
     }
     .hero-textbox span {
-        font-size: 14px;
+        font-size: 28px;
     }
     .hero-img-box {
         height: 75%;
@@ -673,4 +745,8 @@ textarea {
         object-fit: cover;
         max-width: 100%;
     }
+    .hero-btn{
+      padding-bottom: 30px;
+    }
 }
+
